[tool.poetry]
name = "notas-musicais"
version = "0.2.1"
description = "Notas musicais é um CLI para ajudar na formação de escalas, acordes e campos harmônicos"
license = "BeerWare"
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais"}]
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"Documentação" = "https://notas-musicais.readthedocs.io/en/latest/"
"Código" = "https://github.com/dunossauro/notas-musicais"
"Bug Tracker" = "https://github.com/dunossauro/notas-musicais/issues"
"Doação" = "https://apoia.se/livedepython"


[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
blue = "^0.9"
isort = "^5.11"
taskipy = "^1.13"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5"
mkdocstrings = "^0.25"
mkdocstrings-python = "^1.10"
mkdocs-macros-plugin = "^1.0"
jinja2 = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"
publish = "poetry publish -u __token__ -p $NOTAS_MUSICAIS_TOKEN"
